--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,10 @@ background-size: cover;
     flex-direction: column;
     text-align: center;
 }
+
+
+#heading{
+    font-size: 25px ;
+   
+    margin-bottom: 0px;
+}
