--- a/css/style.css
+++ b/css/style.css
@@ -85,4 +85,6 @@ background-size: cover;
 
 #projects{
     display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 1rem;
 }
