added images into the project section

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,10 @@ img{
     width: 500px;
 }
 
+.landingpage{
+    height: 362px;
+}
+
 .project-tile p{
     margin: 0px;
     background-color: red;
