changed the p color!

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ background-size: cover;
 
 
 #welcome-section p{
-    color: #065A60;
+    color: yellow;
     font-size: 30px;
     font-style: italic;
 }
