--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,10 @@ nav{
 ul li{
     display: inline;
     padding: 30px;
-    font-size: 22px;
+    font-size: 18px;
     color: white;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
 }
 
 li:hover{
@@ -57,6 +59,7 @@ background-size: cover;
     color: white;
     font-size: 50px;
     margin-bottom: 0;
+    font-family: 'Raleway', sans-serif;
 }
 
 
@@ -64,6 +67,8 @@ background-size: cover;
     color: yellow;
     font-size: 30px;
     font-style: italic;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
 }
 
 #spacer{
@@ -81,6 +86,7 @@ background-size: cover;
 
 #heading h2{
     font-size: 35px ;
+    
    
    
 }
@@ -113,6 +119,9 @@ img{
     padding-bottom: 10px ;
     position: relative;
     bottom: 10px;
+    font-size: 22px;
+    color: white;
+    background-color: #03071E;
 
 }
 
