fixing the heading line in section #2

--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,15 @@ background-size: cover;
     font-size: 35px ;
     font-family: 'Raleway', sans-serif;
     color: white;
+    margin-bottom: 0px;
     
    
    
+}
+
+hr{
+    width: 545px;
+    margin-top: 0;
 }
 
 
