--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,7 @@ button{
     padding-right: 25px;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-bottom: 50px;
     font-size: 20px;
     font-family: 'Raleway', sans-serif;
     background-color: #03071E;
@@ -183,6 +184,54 @@ button:hover{
 button:hover .arrow{
     position: relative;
     left: 10px;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #065A60;
+}
+
+
+#footer-header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#footer-header h2{
+    font-family: 'Raleway', sans-serif;
+    color: white;
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+#footer-header p{
+    font-family: 'Raleway', sans-serif;
+    color: white;
+    font-style: italic;
+    margin-top: 0px;
+   
+}
+
+
+#bottom-links li{
+    padding: 0;
+    padding-left: 10px;
+}
+
+
+#bottom-links li:hover {
+
+    position: relative;
+    top: 10px;
+    
+
+}
+
+#bottom-links ul{
+    padding-left: 0px;
 }
 
 
@@ -206,6 +255,8 @@ button:hover .arrow{
     hr{
         width: 320px;
     }
+
+
 
 
     }
