--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ nav{
 }
 
 
-ul li{
+ul .uppernav{
     display: inline;
     padding: 30px;
     font-size: 18px;
@@ -32,7 +32,7 @@ ul li{
 
 }
 
-li:hover{
+.uppernav:hover{
     background-color: brown;
     
 }
@@ -215,11 +215,17 @@ footer{
    
 }
 
+#bottom-links{
+    display: flex;
+    flex-direction: row;
+}
+
 
 #bottom-links li{
     padding: 0;
     padding-left: 25px;
     font-size: 25px;
+    display: inline;
     
 }
 
@@ -234,6 +240,7 @@ footer{
 
     position: relative;
     top: 10px;
+    
 
     
 
@@ -241,6 +248,10 @@ footer{
 
 #bottom-links ul{
     padding-left: 0px;
+    font-family: 'Raleway', sans-serif;
+    list-style: none;
+    
+    
 }
 
 
