Revert "why did I do this to myself???"
This reverts commit a1d62ba921b95927d1cd166d70378858ec492f28.

--- a/css/style.css
+++ b/css/style.css
@@ -215,11 +215,17 @@ footer{
    
 }
 
+#bottom-links{
+    display: flex;
+    flex-direction: row;
+}
+
 
 #bottom-links li{
     padding: 0;
     padding-left: 25px;
     font-size: 25px;
+    display: inline;
     
 }
 
@@ -234,6 +240,7 @@ footer{
 
     position: relative;
     top: 10px;
+    
 
     
 
@@ -241,6 +248,10 @@ footer{
 
 #bottom-links ul{
     padding-left: 0px;
+    font-family: 'Raleway', sans-serif;
+    list-style: none;
+    
+    
 }
 
 
