--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ background-size: cover;
     display: flex;
     flex-direction: column;
    justify-content: center;
-   width: 100%;
+
   
    
 }
@@ -287,7 +287,7 @@ footer{
 
 
     @media(min-width:300px) and (max-width:500px){
-        div #welcome-section{
+         #welcome-section{
             width: 500px;
         }
 
